@@ -150,7 +150,7 @@ $('#vboxPane').bind('vmSelectionListChanged',function(){
 				if(!oneLoaded) {
 					oneLoaded = true;
 					targetDiv.siblings().hide();
-					targetDiv.show();		
+					targetDiv.show();
 				}
 				
 
